# collectives

./: CMakeLists.txt  README.md  bcast.c  gather.c  reduce_scatter.c  scatter.c
