cmake_minimum_required(VERSION 3.20)
project(collectives)
find_package(MPI REQUIRED)

add_executable(bcast bcast.c)
target_link_libraries(bcast MPI::MPI_C)
add_executable(gather gather.c)
target_link_libraries(gather MPI::MPI_C)
add_executable(scatter scatter.c)
target_link_libraries(scatter MPI::MPI_C)
add_executable(reduce_scatter reduce_scatter.c)
target_link_libraries(reduce_scatter MPI::MPI_C)
